<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F7F7"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mdjahirulislam.doobbi.view.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <com.smarteist.autoimageslider.SliderLayout
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp"
        android:paddingTop="5dp"
        android:onClick="callTheAuthority"
        android:paddingBottom="5dp"
        android:layout_marginTop="@dimen/home_icon_margin_left">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/phone_receiver"
            android:padding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/call_now"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/home_icon_margin"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/scheduleIconLL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_icon_margin"
                android:layout_marginRight="@dimen/home_icon_margin_right"
                android:layout_weight="1"
                android:background="@drawable/home_icon_background_with_shadow"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="2dp"
                android:clickable="true">

                <ImageView
                    android:layout_width="@dimen/home_icon_height"
                    android:layout_height="@dimen/home_icon_width"
                    android:layout_gravity="center"
                    android:padding="0dp"
                    android:src="@drawable/home_schedule"/>

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingBottom="0dp"
                    android:text="@string/home_schedule"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/home_text_size"
                    />

                <!--</LinearLayout>-->

                <!--</android.support.v7.widget.CardView>-->

            </LinearLayout>


            <LinearLayout
                android:id="@+id/makeOrderLL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_icon_margin_left"
                android:layout_marginRight="@dimen/home_icon_margin"
                android:layout_weight="1"
                android:background="@drawable/home_icon_background_with_shadow"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="2dp">

                <!--<android.support.v7.widget.CardView-->
                <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_gravity="center"-->
                <!--card_view:cardBackgroundColor="@color/colorWhite"-->
                <!--card_view:cardCornerRadius="4dp">-->

                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical"-->
                <!--android:gravity="center">-->

                <ImageView

                    android:layout_width="@dimen/home_icon_height"
                    android:layout_height="@dimen/home_icon_width"
                    android:layout_gravity="center"
                    android:padding="0dp"
                    android:src="@drawable/make_order"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/home_make_order"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/home_text_size"
                    />

                <!--</LinearLayout>-->
                <!--</android.support.v7.widget.CardView>-->
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/home_icon_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/pickUpMeLL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_icon_margin"
                android:layout_marginRight="@dimen/home_icon_margin_right"
                android:layout_weight="1"
                android:background="@drawable/home_icon_background_with_shadow"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="2dp">


                <ImageView
                    android:layout_width="@dimen/home_icon_height"
                    android:layout_height="@dimen/home_icon_width"
                    android:layout_gravity="center"
                    android:padding="0dp"
                    android:src="@drawable/pick_up_point"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/home_pick_up_point"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/home_text_size"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/priceListLL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_icon_margin_left"
                android:layout_marginRight="@dimen/home_icon_margin"
                android:layout_weight="1"
                android:background="@drawable/home_icon_background_with_shadow"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingRight="4dp"
                android:paddingBottom="2dp">

                <!--<android.support.v7.widget.CardView-->
                <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_gravity="center"-->
                <!--card_view:cardBackgroundColor="@color/colorWhite"-->
                <!--card_view:cardCornerRadius="4dp">-->

                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical"-->
                <!--android:gravity="center">-->

                <ImageView
                    android:layout_width="@dimen/home_icon_height"
                    android:layout_height="@dimen/home_icon_width"
                    android:layout_gravity="center"
                    android:padding="0dp"
                    android:src="@drawable/price_list"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/home_price_list"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/home_text_size"
                    />

            </LinearLayout>
            <!--</android.support.v7.widget.CardView>-->
            <!--</LinearLayout>-->


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/home_icon_margin"
            android:layout_marginBottom="@dimen/home_icon_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/orderListLL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_icon_margin"
                android:layout_marginRight="@dimen/home_icon_margin_right"
                android:layout_weight="1"
                android:background="@drawable/home_icon_background_with_shadow"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="0dp">


                <ImageView
                    android:layout_width="@dimen/home_icon_height"
                    android:layout_height="@dimen/home_icon_width"
                    android:layout_gravity="center"
                    android:padding="0dp"
                    android:src="@drawable/order_list"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/home_order"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/home_text_size"
                    />
                <!--</android.support.v7.widget.CardView>-->

            </LinearLayout>


            <LinearLayout
                android:id="@+id/myOfferLL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_icon_margin_left"
                android:layout_marginRight="@dimen/home_icon_margin"
                android:layout_weight="1"
                android:background="@drawable/home_icon_background_with_shadow"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp">


                <ImageView
                    android:layout_width="@dimen/home_icon_height"
                    android:layout_height="@dimen/home_icon_width"
                    android:layout_gravity="center"
                    android:padding="0dp"
                    android:src="@drawable/tag"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/home_offer"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/home_text_size"
                    />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/copyRightTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:text="@string/copy_right"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>


</LinearLayout>
